--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -829,8 +829,8 @@
           (define-key evil-visual-state-map (kbd "SPC SPC") 'helm-M-x)
           (define-key evil-normal-state-map (kbd "SPC SPC") 'helm-M-x)
     
-          (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
-          (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
+          (define-key evil-normal-state-map (kbd "SPC o") 'helm-imenu)
+          (define-key evil-normal-state-map (kbd "SPC b") 'helm-buffers-list)
           (define-key evil-normal-state-map (kbd "SPC B") 'ibuffer)
 
           (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
