Better comment for evil-org

--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -896,7 +896,7 @@
     )
   #+END_SRC
 ** Evil-org-mode
-   From https://github.com/edwtjo/evil-org-mode/blob/master/evil-org.el
+   Code copied directly from [[https://github.com/edwtjo/evil-org-mode/blob/master/evil-org.el][GitHub repo]].
    #+BEGIN_SRC emacs-lisp
      (after 'evil
        (define-minor-mode evil-org-mode
