better organization; haskell-mode kinda fixed

--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -386,38 +386,6 @@
         )
       )
   #+END_SRC
-* guide-key
-  Overview from the [[https://github.com/kbkbkbkb1/guide-key][GitHub page]]
-  #+BEGIN_QUOTE
-  guide-key.el displays the available key bindings automatically and
-  dynamically. guide-key aims to be an alternative of one-key.el.
-  
-  Here are some features of this library:
-
-  - guide-key automatically pops up the keys following your favorite prefixes.
-    Moreover, even if you change key bindings, guide-key follows the change
-    dynamically.
-  - guide-key can highlight particular commands. This makes it easy to find a
-    command you are looking for, and to learn its key binding.
-  - guide-key doesn’t overwrite existing commands and key bindings, so there is
-    no interference with describe-key and describe-bindings.
-  #+END_QUOTE
-  #+BEGIN_SRC emacs-lisp
-    (require-package 'guide-key)
-    (use-package guide-key
-      :diminish guide-key-mode
-      :config
-      (progn
-        (setq guide-key/guide-key-sequence '("C-x" "C-c"))
-        (setq guide-key/recursive-key-sequence-flag t)
-        (guide-key-mode 1)
-  #+END_SRC
-  I'm relatively new to emacs, so having a short delay is beneficial.
-  #+BEGIN_SRC emacs-lisp
-        (setq guide-key/idle-delay 0.1)
-        )
-    )
-  #+END_SRC
 * Eyecandy
 ** Color scheme
    I use the =zenburn= color scheme, because it is easy on my eyes and doesn't look awful
@@ -517,6 +485,19 @@
      (setq whitespace-style '(face lines-tail trailing))
      (global-whitespace-mode 1)
    #+END_SRC
+** Windsize
+   Easy resizing of Emacs windows.
+   #+BEGIN_SRC emacs-lisp
+   (require-package 'windsize)
+   (use-package windsize
+     :init
+     (progn
+       (setq windsize-cols 16)
+       (setq windsize-rows 8)
+       (windsize-default-keybindings)
+       )
+     )
+   #+END_SRC
 * Copy/paste
   Emacs copy-paste does not work by default. First, we enable X selection as a copy-paste buffer.
   #+BEGIN_SRC emacs-lisp
@@ -557,28 +538,16 @@
   ))
   #+END_SRC
 
-* editorconfig
-  #+BEGIN_SRC emacs-lisp
-  (require-package 'editorconfig)
-  (use-package editorconfig)
-
-  (require-package 'etags-select)
-  (use-package etags-select
-    :init
-      (setq etags-select-go-if-unambiguous t)
-    )
-
-  (require-package 'windsize)
-  (use-package windsize
-    :init
-    (progn
-      (setq windsize-cols 16)
-      (setq windsize-rows 8)
-      (windsize-default-keybindings)
-      )
-    )
-  #+END_SRC
 * Code editing
+** Etags Select
+   Offer a choice for equivalent etags. e.g. if overloaded.
+   #+BEGIN_SRC emacs-lisp
+   (require-package 'etags-select)
+   (use-package etags-select
+     :init
+       (setq etags-select-go-if-unambiguous t)
+     )
+   #+END_SRC
 ** Projectile
    AKA =ctrl-p= for Emacs.
    #+BEGIN_SRC emacs-lisp
@@ -711,57 +680,39 @@
    #+END_SRC
 ** Haskell
    #+BEGIN_SRC emacs-lisp
-;     (require-package 'haskell-mode)
-;     (use-package haskell-mode
-;       :commands haskell-mode
-;       :init
-;       (add-to-list 'auto-mode-alist '("\\.l?hs$" . haskell-mode))
-;       :config
-;       (progn
-;         (define-key haskell-mode-map (kbd "C-x C-d") nil)
-;         (define-key haskell-mode-map (kbd "C-c C-z") 'haskell-interactive-switch)
-;         (define-key haskell-mode-map (kbd "C-c C-l") 'haskell-process-load-file)
-;         (define-key haskell-mode-map (kbd "C-c C-b") 'haskell-interactive-switch)
-;         (define-key haskell-mode-map (kbd "C-c C-t") 'haskell-process-do-type)
-;         (define-key haskell-mode-map (kbd "C-c C-i") 'haskell-process-do-info)
-;         (define-key haskell-mode-map (kbd "C-c M-.") nil)
-;         (define-key haskell-mode-map (kbd "C-c C-d") nil)
-;         (define-key haskell-mode-map (kbd "C-c C-c") 'haskell-compile))
-   #+END_SRC emacs-lisp
-   Hack =haskell-mode= to play nice with evil. Modified code taken [[https://github.com/prooftechnique/.emacs.d/blob/6d08779adb8fe67acbe9ab82fe25e78a7fc40eb8/config/jhenahan-haskell.el][from this github]].
-   #+BEGIN_SRC emacs-lisp
-;         (add-hook 'haskell-mode-hook
-;                   (lambda ()
-;                     (turn-on-haskell-doc-mode)
-;                     (after 'evil
-;                       (setq evil-auto-indent nil))
-;                     (turn-on-haskell-indentation)
-;                     (ghc-init)))
-;         (after 'linum (add-hook 'haskell-interactive-mode (lambda () (linum-mode 0))))
-;         (after 'evil (add-hook 'haskell-interactive-mode (lambda () (evil-mode 0))))
-;         (use-package haskell-mode-autoloads)
-;         (use-package inf-haskell)
-;         (use-package haskell-cabal
-;           :init
-;           (progn
-;             (define-key haskell-cabal-mode-map (kbd "C-c C-c") 'haskell-compile))
-;           )
-;         (use-package hs-lint)))
-   #+END_SRC
-** Git
-   <<Magit>>
-   #+BEGIN_SRC emacs-lisp
-         (require-package 'magit)
-         (use-package magit
-           :config
-           (progn 
-               (setq magit-diff-options '("--histogram"))
-               (global-set-key (kbd "C-x g") 'magit-status))
-     ;          (global-git-gutter+-mode)
-           )
+          (require-package 'haskell-mode)
+          (use-package haskell-mode
+            :mode ("\\.hs\\'" . haskell-mode)
+            :config
+            (progn
+     ;         (after 'linum (add-hook 'haskell-interactive-mode (lambda () (linum-mode 0))))
+     ;         (after 'evil (add-hook 'haskell-interactive-mode (lambda () (evil-mode 0))))
+              (define-key haskell-mode-map (kbd "C-x C-d") nil)
+              (define-key haskell-mode-map (kbd "C-c C-z") 'haskell-interactive-switch)
+              (define-key haskell-mode-map (kbd "C-c C-l") 'haskell-process-load-file)
+              (define-key haskell-mode-map (kbd "C-c C-b") 'haskell-interactive-switch)
+              (define-key haskell-mode-map (kbd "C-c C-t") 'haskell-process-do-type)
+              (define-key haskell-mode-map (kbd "C-c C-i") 'haskell-process-do-info)
+              (define-key haskell-mode-map (kbd "C-c M-.") nil)
+              (define-key haskell-mode-map (kbd "C-c C-d") nil)
+              (define-key haskell-mode-map (kbd "C-c C-c") 'haskell-compile)
+              (add-hook 'haskell-mode-hook
+                        (lambda ()
+                          (turn-on-haskell-doc-mode)
+                          (after 'evil
+                            (setq evil-auto-indent nil))
+                          (turn-on-haskell-indentation)
+                          (ghc-init)))
+              (use-package haskell-mode-autoloads)
+              (use-package inf-haskell)
+              (use-package haskell-cabal
+                :init
+                (define-key haskell-cabal-mode-map (kbd "C-c C-c") 'haskell-compile)
+                )
+              (use-package hs-lint)
+              )
+            )
      
-     (require-package 'gist)
-       
    #+END_SRC
 ** Ag: speedy inter-file grep
    #+BEGIN_SRC emacs-lisp
@@ -786,39 +737,20 @@
        )
      )
    #+END_SRC
-* Flycheck
-  #+BEGIN_SRC emacs-lisp
-    (require-package 'flycheck)
-    (use-package flycheck
-      :config
-      (progn
-        (setq flycheck-check-syntax-automatically '(save mode-enabled))
-        (setq flycheck-checkers (delq 'emacs-lisp-checkdoc flycheck-checkers))
-        (setq flycheck-checkers (delq 'html-tidy flycheck-checkers))
-        (global-flycheck-mode 1)
-        (after 'evil (add-hook 'flycheck-error-list-mode-hook (lambda () (evil-mode 0))))
-        )
-      )
-  #+END_SRC
-* ace-jump-mode
-  #+BEGIN_SRC emacs-lisp
-    (require-package 'ace-jump-mode)
-    (use-package ace-jump-mode
-      :config
-      (progn
-        (after 'evil
-          ; Not sure if the `after` here is necessary, but anyway:
-          (after 'ace-jump-mode-autoloads
-            (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
-            (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
-            (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
-          ; These will definitely work:
-          (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
-          (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
-          (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
-        ))
-    
-  #+END_SRC
+** Flycheck
+   #+BEGIN_SRC emacs-lisp
+     (require-package 'flycheck)
+     (use-package flycheck
+       :config
+       (progn
+         (setq flycheck-check-syntax-automatically '(save mode-enabled))
+         (setq flycheck-checkers (delq 'emacs-lisp-checkdoc flycheck-checkers))
+         (setq flycheck-checkers (delq 'html-tidy flycheck-checkers))
+         (global-flycheck-mode 1)
+         (after 'evil (add-hook 'flycheck-error-list-mode-hook (lambda () (evil-mode 0))))
+         )
+       )
+   #+END_SRC
 * Elisp-slime-nav
   #+BEGIN_SRC emacs-lisp
   (require-package 'elisp-slime-nav)
@@ -1322,4 +1254,61 @@
   ;; End:
   
   ;; unbound.el ends here
+   #+END_SRC
+** guide-key
+   Overview from the [[https://github.com/kbkbkbkb1/guide-key][GitHub page]]
+   #+BEGIN_QUOTE
+   guide-key.el displays the available key bindings automatically and
+   dynamically. guide-key aims to be an alternative of one-key.el.
+   
+   Here are some features of this library:
+
+   - guide-key automatically pops up the keys following your favorite prefixes.
+     Moreover, even if you change key bindings, guide-key follows the change
+     dynamically.
+   - guide-key can highlight particular commands. This makes it easy to find a
+     command you are looking for, and to learn its key binding.
+   - guide-key doesn’t overwrite existing commands and key bindings, so there is
+     no interference with describe-key and describe-bindings.
+   #+END_QUOTE
+   #+BEGIN_SRC emacs-lisp
+     (require-package 'guide-key)
+     (use-package guide-key
+       :diminish guide-key-mode
+       :config
+       (progn
+         (setq guide-key/guide-key-sequence '("C-x" "C-c"))
+         (setq guide-key/recursive-key-sequence-flag t)
+         (guide-key-mode 1)
+   #+END_SRC
+   I'm relatively new to emacs, so having a short delay is beneficial.
+   #+BEGIN_SRC emacs-lisp
+         (setq guide-key/idle-delay 0.1)
+         )
+     )
+   #+END_SRC
+** ace-jump-mode
+   #+BEGIN_QUOTE
+   AceJump-mode is a minor mode for Emacs, enabling fast/direct cursor
+   movement in current view.
+   #+END_QUOTE
+   Do things like offer highlighted words as choices and let me type the first
+   character in them to select them, etc.
+   #+BEGIN_SRC emacs-lisp
+     (require-package 'ace-jump-mode)
+     (use-package ace-jump-mode
+       :config
+       (progn
+         (after 'evil
+           ; Not sure if the `after` here is necessary, but anyway:
+           (after 'ace-jump-mode-autoloads
+             (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
+             (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
+             (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
+           ; These will definitely work:
+           (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
+           (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
+           (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
+         ))
+     
    #+END_SRC
